[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 7.0.0",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.ruff]
target-version = "py39"
line-length = 109
lint.select = ["E", "F", "I", "UP"]

### tox configuration ###
[tool.tox]
env_list = ["py313", "py312", "py311", "py310", "py39", "pypy3"]

[tool.tox.env_run_base]
description = "Run test suite on {base_python}"
deps = ["-r{toxinidir}/test-requirements.txt"]
commands = [
    ["nose2", "--coverage", "varlink"]
]

[tool.tox.env_run_base.set_env]
VIRTUAL_ENV="{envdir}"
BRANCH_NAME="master"
CLIENT_NAME="varlink"
