[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 7.0.0",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name = "varlink"
description = "Python implementation of the Varlink protocol"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
authors = [
    {name = "Lars Karlitski", email = "lars@karlitski.net"},
    {name = "Harald Hoyer", email = "harald@hoyer.xyz"}
]
keywords = ["ipc", "varlink", "rpc"]
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://varlink.org/"
Repository = "https://github.com/varlink/python"
Issues = "https://github.com/varlink/python/issues"

[tool.setuptools.package-data]
varlink = [
    "*.varlink"
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.ruff]
target-version = "py39"
line-length = 109
lint.select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = 3.9

### tox configuration ###
[tool.tox]
env_list = ["py314", "py313", "py312", "py311", "py310", "py39", "pypy3"]

[tool.tox.env_run_base]
description = "Run test suite on {base_python}"
deps = ["-r{toxinidir}/test-requirements.txt"]
commands = [
    ["pytest", "--cov=varlink", "--cov-report=term", "{posargs:varlink}"]
]

[tool.tox.env_run_base.set_env]
VIRTUAL_ENV="{envdir}"
BRANCH_NAME="master"
CLIENT_NAME="varlink"

[tool.tox.env.ruff-format]
description = "Check formatting using the ruff tool"
deps = ["ruff"]
commands = [
    ["ruff", "--version"],
    ["ruff", "format", "--quiet", "--check", "--diff", "{posargs:varlink}"]
]

[tool.tox.env.ruff-check]
description = "Run linting checks using the ruff tool"
deps = ["ruff"]
commands = [
    ["ruff", "--version"],
    ["ruff", "check", "{posargs:varlink}"]
]

[tool.tox.env.mypy]
description = "Run type checking tool mypy"
deps = ["mypy"]
commands = [
    ["mypy", "--version"],
    ["mypy", "{posargs:varlink}"]
]
