[metadata]
name = varlink
description = Python implementation of the Varlink protocol
long_description = file: README.md
long_description_content_type = text/markdown
author = Lars Karlitski<lars@karlitski.net>, Harald Hoyer<harald@hoyer.xyz>
author_email = harald@hoyer.xyz
url = https://github.com/varlink/python
keywords = ipc, varlink, rpc
license = ASL 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Networking

[options]
zip_safe = False
python_requires=>=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
include_package_data = True
packages = varlink
setup_requires =
  setuptools_scm < 6 ; python_version < "3"
  setuptools_scm ; python_version >= "3"

[options.package_data]
varlink = *.varlink

[bdist_wheel]
universal = 1

